--- a/FirstApp/Base.lproj/Main.storyboard
+++ b/FirstApp/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="FirstApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,65 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="neko.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Mkp-4k-DAW">
+                                <rect key="frame" x="-18" y="133" width="636" height="335"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="fukidashi.png" translatesAutoresizingMaskIntoConstraints="NO" id="sC7-hs-Ac1">
+                                <rect key="frame" x="315" y="287" width="170" height="126"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="170" id="7wH-MX-p7h"/>
+                                    <constraint firstAttribute="height" constant="126" id="qqB-tE-zLd"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="初アプリにゃ！？" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kz0-dK-iN0">
+                                <rect key="frame" x="301" y="333" width="198" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="198" id="Qo0-fZ-mdA"/>
+                                    <constraint firstAttribute="height" constant="34" id="Tq6-iP-UM3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ytv-5w-RAO">
+                                <rect key="frame" x="277" y="520" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="6WQ-Ma-Xqs"/>
+                                    <constraint firstAttribute="height" constant="30" id="80k-Ml-XGF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <state key="normal" title="祝！">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3BH-Zs-ooT"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="Ytv-5w-RAO" secondAttribute="centerX" id="72N-fo-X96"/>
+                            <constraint firstAttribute="centerX" secondItem="sC7-hs-Ac1" secondAttribute="centerX" constant="-100" id="Fyq-7a-wyd"/>
+                            <constraint firstAttribute="centerX" secondItem="Mkp-4k-DAW" secondAttribute="centerX" id="Gqd-t3-PX4"/>
+                            <constraint firstAttribute="centerY" secondItem="kz0-dK-iN0" secondAttribute="centerY" constant="-50" id="HLD-lZ-pcL"/>
+                            <constraint firstAttribute="centerX" secondItem="kz0-dK-iN0" secondAttribute="centerX" constant="-100" id="HLX-jY-5Nj"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Ytv-5w-RAO" secondAttribute="bottom" constant="50" id="ORL-62-siT"/>
+                            <constraint firstAttribute="centerY" secondItem="sC7-hs-Ac1" secondAttribute="centerY" constant="-50" id="cdn-8p-sC3"/>
+                            <constraint firstAttribute="centerY" secondItem="Mkp-4k-DAW" secondAttribute="centerY" id="naW-on-L8j"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="kz0-dK-iN0" id="7Dv-MD-5Dk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="fukidashi.png" width="210" height="250"/>
+        <image name="neko.jpg" width="636" height="335"/>
+    </resources>
 </document>
